--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "twig/twig": "~1.6",
 		"slim/slim": "2.*",
 		"slim/views": "0.1.*",
-		"phpmailer/phpmailer": ">5.0"
+		"phpmailer/phpmailer": ">5.0",
+        "twig/extensions": "~1.1.0"
     }
 }
